<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="capstone">Capstone</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="ubiquitousToast">This will launch ubiquitous app</string>
    <string name="moviesToast">This will launch my movies app</string>
    <string name="stockToast">This will launch stock hawk app</string>
    <string name="biggerToast">This will launch build it bigger app</string>
    <string name="materialToast">This will launch my material app</string>
    <string name="capstoneToast">This will launch my capstone app</string>
</resources>
