<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="udacity.dvik.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:layout_marginBottom="10dp"
        android:textColor="#2E3D49"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <Button
        android:text="@string/popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:id="@+id/btn1" />

    <Button
        android:text="@string/stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:textColor="#FFFFFF"
        android:id="@+id/btn2" />

    <Button
        android:text="@string/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:id="@+id/btn3"
        />

    <Button
        android:text="@string/make_your_app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:id="@+id/btn4"
      />

    <Button
        android:text="@string/go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:id="@+id/btn5" />

    <Button
        android:text="@string/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:id="@+id/btn6" />
</LinearLayout>
